k8s/stickyapp-rust.yaml
apiVersion: v1
kind: Service
metadata:
  name: stickyapp-rust
  labels:
    app: stickyapp-rust
    service: stickyapp-rust
spec:
  #type: LoadBalancer
  ports:
  - port: 8080
    name: http
    targetPort: 8080
  selector:
    app: stickyapp-rust
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stickyapp-rust
  labels:
    app: stickyapp-rust
spec:
  replicas: 3
  selector:
    matchLabels:
      app: stickyapp-rust
  template:
    metadata:
      labels:
        app: stickyapp-rust
    spec:
      containers:
      - name: stickyapp-rust
        image: paarijaat/stickyapp_rust:v0.1.3
        imagePullPolicy: IfNotPresent #Always
        lifecycle:
          preStop:
            exec:
              command: ["curl", "localhost:8080/shutdown"]
        resources:
          requests:
            memory: "100Mi"
            cpu: "50m"
          limits:
            memory: "200Mi"
            cpu: "400m"
        ports:
        - containerPort: 8080
