k8s/stickyapp-rust-envoyfilter-hybrid.yaml
# istioctl proxy-config cluster istio-ingressgateway-569f8cdc97-mjml7.istio-system -o json | jq
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: stickyapp-rust-envoyfilter-hybrid
  namespace: istio-system
spec:
  configPatches:
  - applyTo: CLUSTER
    match:
      context: GATEWAY
      cluster:
        name: "outbound|8080|direct|stickyapp-rust.default.svc.cluster.local"
    patch:
      operation: MERGE
      value: 
        original_dst_lb_config:
          use_http_header: true
